fix bug z-index

--- a/assets/style.css
+++ b/assets/style.css
@@ -113,7 +113,7 @@ nav + button span {
   height: 100%;
   width: 50%;
   position: fixed;
-  z-index: 3;
+  z-index: 4;
   left: 0;
   top: 0;
 
@@ -123,7 +123,7 @@ nav + button span {
   opacity: 0;
 }
 .activeCon > nav {
-  z-index: 4;
+  z-index: 5;
   display: block;
 }
 .activeCon {
@@ -138,7 +138,7 @@ nav + button span {
 .activeCon::before {
   width: 100%;
   height: 100vh;
-  z-index: 2;
+  z-index: 3;
 }
 nav + button > span:nth-child(2) {
   margin: 0.2rem 0;
@@ -173,8 +173,8 @@ nav + button > span:nth-child(2) {
   font-size: x-small;
   font-weight: bolder;
   position: absolute;
-  top: 12px;
-  right: 70px;
+  top: 4px;
+  right: 75px;
   color: white;
   border-radius: 50%;
   background-color: var(--mainColor);
@@ -260,9 +260,6 @@ nav + button > span:nth-child(2) {
   width: 100%;
 }
 
-#description {
-  width: 50%;
-}
 
 .swiper-button-next,
 .swiper-button-prev {
@@ -320,7 +317,7 @@ nav + button > span:nth-child(2) {
 
 /* style description */
 #description {
-  padding: 1rem 2rem;
+  padding: 0.5rem 2rem;
   width: 100%;
 }
 .small-title {
@@ -336,7 +333,7 @@ nav + button > span:nth-child(2) {
   text-transform: capitalize;
 }
 .title ~ p {
-  font-size: small;
+  font-size: x-small;
   color: grey;
   margin-top: 1rem;
   max-height: 10vh;
@@ -493,8 +490,8 @@ nav + button > span:nth-child(2) {
     font-size: x-small;
     font-weight: bolder;
     position: absolute;
-    top: 25px;
-    right: 184px;
+    top: 20px;
+    right: 189px;
     color: white;
     border-radius: 50%;
     background-color: var(--mainColor);
@@ -559,7 +556,7 @@ nav + button > span:nth-child(2) {
     overflow: visible;
     max-height: fit-content;
     text-align: justify;
-    font-size: medium;
+    font-size: small;
   }
   .wrapper-price {
     flex-wrap: wrap;
